# ModSanity

./: CLI-Documentation.md  Cargo.toml  FOMOD.md  LICENSE  Questions.md  README.md  install.sh  lastChanges.txt  masterlist.yaml  uninstall.sh
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs
src/collections/: mod.rs
src/config/: mod.rs  paths.rs
src/db/: mod.rs  schema.rs
src/games/: mod.rs  proton.rs  proton_runtime.rs  skyrimse.rs
src/import/: filters.rs  library_check.rs  matcher.rs  mod.rs  modlist_format.rs  modlist_parser.rs
src/mods/: archive.rs  auto_categorize.rs  conflicts.rs  deploy.rs  mod.rs
src/mods/fomod/: advanced.rs  conditions.rs  executor.rs  helpers.rs  mod.rs  parser.rs  persistence.rs  planner.rs  validation.rs  wizard.rs
src/nexus/: graphql.rs  mod.rs  populate.rs  rest.rs
src/plugins/: loadorder.rs  loot.rs  masterlist.rs  mod.rs  parser.rs  sort.rs
src/profiles/: manager.rs  mod.rs
src/queue/: mod.rs  processor.rs  state.rs
src/tui/: mod.rs  ui.rs
src/tui/screens/: fomod_wizard.rs  mod.rs  nexus_catalog.rs
src/tui/widgets/: mod.rs
